# aperi-mech

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  .trunkignore  AGENTS.md  CMakeLists.txt  Dockerfile  Dockerfile_Nvidia_H100_GPU  Dockerfile_Nvidia_T4_GPU  Doxyfile  LICENSE.md  README.md  build_trilinos_dev_via_spack.sh  codecov.yml  do_configure  docker-compose.yml  docker-compose_nvidia_h100_gpu.yml  docker-compose_nvidia_t4_gpu.yml  index.html  main.cpp  performance_comparison_memory_results.json  performance_comparison_results.json  performance_comparison_timing_results.json
.github/: copilot-instructions.md
.github/workflows/: README.md  ci-cd-hybrid-pipeline.yaml  ci-cd-pipeline.yaml  ci-cd-pipeline.yaml.bak  ci.yml  clean_old_performance_results.sh  collect_performance_test_results.sh  performance-pipeline.yaml
.trunk/: trunk.yaml
cmake/: CodeCoverage.cmake  build_settings.cmake  code_coverage.cmake  dependencies.cmake  performance_testing.cmake  sanitizer.cmake  targets.cmake  testing.cmake  version_info.cmake
dev/bench/: data.js
docker/: .gitignore  Dockerfile_AperiMechDev_Ubuntu2204  Dockerfile_AperiMechDev_Ubuntu2204_Nvidia  Dockerfile_AperiMechFull_Ubuntu2404  Dockerfile_AperiMech_RockyLinux9  Dockerfile_AperiMech_Ubuntu2204  Dockerfile_AperiMech_Ubuntu2204_Nvidia  Dockerfile_AperiMech_Ubuntu2404  Dockerfile_AperiMech_Ubuntu2404_Nvidia  Dockerfile_AperiMech_Ubuntu2404_gcc12  GHCR_SETUP.md  README.md  README_dockerfile_converter.md  build_and_push_images.sh  build_images_for_cicd.sh  build_trilinos_dev_via_spack.sh  docker-compose.yml  docker-compose_nvidia.yml  dockerfile_to_shell.py  setup_vm_ubuntu2404.sh
include/: AperiStkUtils.h  Application.h  BoundaryCondition.h  BoundaryConditionManager.h  CellDisconnect.h  CellDisconnectUtils.h  ComputeElementVolumeFunctor.h  ComputeForceFunctor.h  ComputeForceSmoothedCell.h  ComputeInternalForceBase.h  ComputeInternalForceFunctors.h  ComputeInternalForceGaussian.h  ComputeInternalForceSmoothedCell.h  ConnectedEntityProcessor.h  Constants.h  DeviceVector.h  Element.h  ElementBase.h  ElementForceProcessor.h  ElementHexahedron8.h  ElementNodeProcessor.h  ElementProcessor.h  ElementReproducingKernel.h  ElementSmoothedTetrahedron4.h  ElementSmoothedTetrahedron4Storing.h  ElementTetrahedron4.h  ElementUtils.h  EntityProcessor.h  ExplicitTimeIntegrator.h  ExternalForceContribution.h  Field.h  FieldData.h  FieldManager.h  FieldUtils.h  FlattenedRaggedArray.h  FlattenedRaggedArrayData.h  ForEachEntity.h  ForceContribution.h  FunctionCreationProcessor.h  FunctionEvaluationProcessor.h  (+57 more)
include/AperiInputSchema/: AperiInputSchema.h
include/ContactForceContribution/: Base.h  Factory.h
include/ExternalForceContribution/: Base.h  Factory.h  Gravity.h  Traction.h
include/InitialCondition/: Base.h  ComponentAndValueInitialCondition.h  Factory.h
include/Materials/: Base.h  DruckerPrager.h  Elastic.h  Factory.h  LinearElastic.h  NeoHooke.h  NeoHookeWithDamage.h  Plastic.h  PowerLawCreep.h
include/Solvers/: Base.h  Explicit.h  Factory.h
input/: input_schema.yaml
scripts/: VM_POOL_GUIDE.md  setup-new-vm.sh
spack/etc/: repos.yaml
spack/repo/: repo.yaml
src/: Application.cpp  BoundaryCondition.cpp  CellDisconnect.cpp  CellDisconnectUtils.cpp  Element.cpp  FieldData.cpp  FunctionCreationProcessor.cpp  FunctionValueCreationProcessor.cpp  FunctionValueStorageProcessor.cpp  FunctionValueUtils.cpp  InitialConditionManager.cpp  InitialConditionUtil.cpp  InternalForceContribution.cpp  IoInputFile.cpp  IoMesh.cpp  IoUtils.cpp  ManualScopeTimer.cpp  MassUtils.cpp  MathUtils.cpp  MaxEdgeLengthProcessor.cpp  MeshData.cpp  MeshDataUtils.cpp  MeshLabelerUtils.cpp  NeighborSearchProcessor.cpp  Preprocessor.cpp  Selector.cpp  SimpleTimer.cpp  SimpleTimerFactory.cpp  Solver.cpp  main.cpp  material_driver_main.cpp
src/ContactForceContribution/: Base.cpp  Factory.cpp
src/ExternalForceContribution/: Base.cpp  Factory.cpp  Gravity.cpp  Traction.cpp
src/InitialCondition/: Base.cpp  ComponentAndValueInitialCondition.cpp  Factory.cpp
src/Solvers/: Base.cpp  Explicit.cpp
test/: .gitignore  ApplicationTest.cpp  ApplicationTestFixture.h  BoundaryConditionTest.cpp  CaptureOutputTestFixture.h  CompadreApproximationFunctionTest.cpp  CompadreTest.cpp  ElementTest.cpp  ElementUtilsTest.cpp  EntityProcessorTest.cpp  FunctionValueStorageProcessorTestFixture.h  InitialConditionManagerTest.cpp  InitialConditionUtilTest.cpp  IoInputFileTest.cpp  IoMeshTest.cpp  IoUtilsTest.cpp  MassUtilsTest.cpp  MaterialDriverTest.cpp  MathUtilsTest.cpp  NeighborSearchProcessorTest.cpp  NeighborSearchProcessorTestFixture.h  NgpTest.cpp  NodeProcessorTest.cpp  README.md  SolverPerformanceTest.cpp  SolverTest.cpp  SolverTestFixture.h  StkSearchTest.cpp  TimeStepperTest.cpp  UnitTestUtils.cpp  UnitTestUtils.h  ValueFromGeneralizedFieldProcessorTest.cpp  YamlUtilTest.cpp  run_all_tests.sh  run_all_unit_tests.sh  run_full_performance_pipeline_locally.sh  run_material_tests.sh  run_performance_pipeline_locally.py  run_performance_pipeline_locally.sh  run_regression_tests.py  (+3 more)
test/benchmarking/: PlotBenchmarkResuts.py  PlotShapeFunctionBenchmarkResuts.py  benchmark_results_4_cpus.csv  benchmark_results_cpu.csv  benchmark_results_gpu.csv  benchmark_results_gpu_no_sync.csv  plot_solver_results.py  run_and_plot.sh  shape_function_benchmark_cpu.csv  shape_function_benchmark_gpu.csv
test/material_tests/: .gitignore  conftest.py  neohookean.ipynb  python_test_driver.py  (+1 more)
tools/: README.md
tools/python/aperi-mech/: pyproject.toml
tools/python/spackx/: README.md  pre-commit  pyproject.toml
tools/python/spackx/src/spackx/: __init__.py  patch.py
tools/python/spackx/src/spackx/envs/darwin-macports-x86_64/: spack.yaml
tools/python/spackx/src/spackx/etc/: config.yaml  repos.yaml
tools/python/spackx/src/spackx/patches/: prereleases-v1.0.0-alpha.4.patch
tools/python/spackx/src/spackx/repos/aperi/: repo.yaml
tools/python/spackx/src/spackx/repos/aperi/build_systems/: git.py
tools/python/spackx/src/spackx/spack-aperi/aperi/cmd/: patch_trilinos.py
(+297 files in other folders)
