[project]
name = "aperi_mech"
version = "0.0.1"
requires-python = ">=3.11"
description = "Aperi mech python package"

dependencies = [
  "clingo",
  "pytest==8.4.0",
  "testbook==0.4.2",
  "jupyter==1.1.1",
  "jupyterlab==4.4.3",
  "numpy==2.3.0",
  "scipy==1.15.3",
  "matplotlib==3.10.3",
  "ipykernel==6.29.5",
  "meshio==5.3.5",
  "netCDF4==1.7.2",
  "pandas==2.3.0",
  "pybind11",
  "PyYAML",
  "optuna",
  "scikit-learn",
  "ruff",
  "mypy",
]

[build-system]
requires = ["setuptools", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = "../../.."

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.format.ruff]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
ignore = ["E741", "F841", "E731"]

[tool.ruff.lint.isort]
force-single-line = true
