[project]
name = "aperi_mech"
version = "0.0.1"
requires-python = ">=3.11"
description = "Aperi mech python package"

dependencies = [
  "clingo",
  "pytest>=8.0.0",
  "testbook>=0.4.2",
  "jupyter>=1.0.0",
  "jupyterlab>=4.0.0",
  "numpy>=1.26.0,<2.0",
  "scipy>=1.11.0",
  "matplotlib>=3.8.0",
  "ipykernel>=6.29.0",
  "meshio>=5.3.0",
  "netCDF4>=1.6.0",
  "pandas>=2.0.0",
  "py2app",
  "pybind11",
  "PyQt6",
  "pyvista",
  "pyvistaqt",
  "PyYAML",
  "optuna",
  "scikit-learn",
  "markdown",
  "ruff",
  "mypy",
  "imppy3d @ git+https://github.com/aperijake/imppy3d.git@float32_support",
]

[build-system]
requires = ["setuptools", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = "../../.."

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.format.ruff]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
ignore = ["E741", "F841", "E731"]

[tool.ruff.lint.isort]
force-single-line = true
